# ns-3-project

./: CMakeLists.txt  PERFORMANCE.md  README.md  README.txt
docs/plans/: 2025-11-11-network-bandwidth-design.md  2025-11-26-dynamic-ttl-policy-design.md  2025-11-26-performance-optimization-proposal.md  2025-11-26-progress-tracking-design.md
examples/: CMakeLists.txt  http-cache-scenario.cc  http-cache-video-streaming.cc
model/: http-cache-app.cc  http-cache-app.h  http-client-app.cc  http-client-app.h  http-header.cc  http-header.h  http-origin-app.cc  http-origin-app.h
